<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2017 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<!-- Copyright (c) 2025 The Qorai Authors. All rights reserved.
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this file,
     You can obtain one at https://mozilla.org/MPL/2.0/. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_id_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@id/menu_id_targeted_help"
        android:icon="@drawable/ic_help_and_feedback"
        android:title="@string/menu_help"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/export_passwords"
        android:title="@string/password_settings_export_action_title"
        android:contentDescription="@string/password_settings_export_action_description"
        app:showAsAction="never"/>
    <item android:id="@+id/close_menu_id" android:title="@string/menu_exit" android:contentDescription="@string/menu_exit" app:showAsAction="never"/>
</menu>
