<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2025 The Qorai Authors. All rights reserved.
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this file,
     You can obtain one at https://mozilla.org/MPL/2.0/. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orderingFromXml="false">

    <!-- Save Passwords Switch -->
    <org.chromium.components.browser_ui.settings.ChromeSwitchPreference
        android:key="save_passwords_switch"
        android:order="0"
        android:title="@string/password_settings_save_passwords"
        android:summaryOn="@string/text_on"
        android:summaryOff="@string/text_off"
        android:persistent="false" />

    <!-- Auto Sign-in Switch -->
    <org.chromium.components.browser_ui.settings.ChromeSwitchPreference
        android:key="autosignin_switch"
        android:order="1"
        android:title="@string/passwords_auto_signin_title"
        android:summary="@string/passwords_auto_signin_description"
        android:persistent="false" />

    <!-- Import passwords -->
    <org.chromium.components.browser_ui.settings.ChromeBasePreference
        android:key="import_passwords"
        android:order="2"
        android:title="@string/password_settings_import_action_title"
        android:summary="@string/password_settings_import_action_description"
        android:icon="@drawable/file_download"
        app:iconTint="@macro/default_icon_color"
        android:persistent="false" />

    <!-- Export passwords -->
    <org.chromium.components.browser_ui.settings.ChromeBasePreference
        android:key="export_passwords"
        android:order="3"
        android:title="@string/password_settings_export_action_title"
        android:summary="@string/password_settings_export_action_description"
        android:icon="@drawable/file_upload"
        app:iconTint="@macro/default_icon_color"
        android:persistent="false" />

    <!-- Saved Passwords Category -->
    <PreferenceCategory
        android:key="saved_passwords"
        android:order="6"
        android:title="@string/password_list_title" />

    <!-- No Passwords Message -->
    <org.chromium.components.browser_ui.settings.TextMessagePreference
        android:key="saved_passwords_no_text"
        android:order="7"
        android:summary="@string/saved_passwords_none_text" />

    <!-- Exceptions Category -->
    <PreferenceCategory
        android:key="exceptions"
        android:order="8"
        android:title="@string/section_saved_passwords_exceptions" />

</PreferenceScreen>
