<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2020 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->

<!-- Copyright (c) 2025 The Qorai Authors. All rights reserved.
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this file,
     You can obtain one at https://mozilla.org/MPL/2.0/. -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.chromium.components.browser_ui.widget.MaterialCardViewNoShadow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:foreground="@drawable/button_borderless_compat"
        style="@style/MaterialCardStyle">

        <org.chromium.ui.widget.TextViewWithLeading
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/card_padding"
            android:text="@string/password_no_result"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.TextMedium.Secondary"
            app:leading="@dimen/text_size_medium_leading" />

    </org.chromium.components.browser_ui.widget.MaterialCardViewNoShadow>

</FrameLayout>
